--- a/static/style.css
+++ b/static/style.css
@@ -33,3 +33,9 @@ footer {
     background-color: #333;
     color: white;
 }
+
+.label-with-space {
+    margin-right: 10px; /* Adjust the margin as needed */
+    display: inline-block; /* Display the label as an inline block */
+    vertical-align: middle
+}
