--- a/templates/index.html
+++ b/templates/index.html
@@ -9,20 +9,97 @@
 <body>
 
     <header>
-        <h1>Welcome to Your Simple Website</h1>
+        <h1>Automatically booking evaluation slots</h1>
     </header>
 
     <main>
         <section>
-            <h2>About Us</h2>
-            <p>This is a simple website to get you started with web development.</p>
+            <h2>Input</h2>
+            <form action="{{ url_for('handle_form') }}" method="post" onsubmit="return validateTime()">
+                <label for="user_id" class="label-with-space">ID:</label>
+                <input type="text" id="user_id" name="user_id" required><br>
+                
+                <label for="password" class="label-with-space">Password:</label>
+                <input type="password" id="password" name="password" required><br>
+                
+                <label for="project_name" class="label-with-space">project:</label>
+                <select id="project_name" name="project_name" required>
+                    <option value="42cursus-libft">libft</option>
+                    <option value="42cursus-ft_printf">ft_printf</option>
+                    <option value="42cursus-get_next_line">get_next_line</option>
+                    <option value="born2beroot">born2beroot</option>
+                    <option value="so_long">so_long</option>
+                    <option value="42cursus-fdf">fdf</option>
+                    <option value="42cursus-fract-ol">fract-ol</option>
+                    <option value="42cursus-push_swap">push_swap</option>
+                    <option value="minitalk">minitalk</option>
+                    <option value="pipex">pipex</option>
+                    <option value="42cursus-philosophers">philosophers</option>
+                    <option value="42cursus-minishell">minishell</option>
+                    <option value="minirt">minirt</option>
+                    <option value="cub3d">cub3d</option>
+                    <option value="netpractice">netpractice</option>
+                    <option value="inception">inception</option>
+                    <option value="webserv">webserv</option>
+                    <option value="ft_irc">ft_irc</option>
+                    <option value="cpp-module-00">cpp00</option>
+                    <option value="cpp-module-01">cpp01</option>
+                    <option value="cpp-module-02">cpp02</option>
+                    <option value="cpp-module-03">cpp03</option>
+                    <option value="cpp-module-04">cpp04</option>
+                    <option value="cpp-module-05">cpp05</option>
+                    <option value="cpp-module-06">cpp06</option>
+                    <option value="cpp-module-07">cpp07</option>
+                    <option value="cpp-module-08">cpp08</option>
+                    <option value="cpp-module-09">cpp09</option>
+                    <option value="ft_transcendence">ft_transcendence</option>
+                </select><br>
+
+                <label for="evaluation_day" class="label-with-space">Evaluation Day:</label>
+                <select id="evaluation_day" name="evaluation_day" required>
+                    <option value="0">today</option>
+                    <option value="1">tomorrow</option>
+                    <option value="2">2days</option>
+                    <option value="3">3days</option>
+                </select><br>
+
+                <label for="start_time" class="label-with-space">Desired start time:</label>
+                <select id="start_time" name="start_time" required>
+                    {% for hour in range(0, 24) %}
+                        {% for minute in ['00', '15', '30', '45'] %}
+                            <option value="{{ '{:02d}'.format(hour) }}:{{ minute }}">{{ '{:02d}'.format(hour) }}:{{ minute }}</option>
+                        {% endfor %}
+                    {% endfor %}
+                </select><br>
+
+                <label for="end_time" class="label-with-space">Desired end time:</label>
+                <select id="end_time" name="end_time" required>
+                    {% for hour in range(0, 24) %}
+                        {% for minute in ['00', '15', '30', '45'] %}
+                            <option value="{{ '{:02d}'.format(hour) }}:{{ minute }}">{{ '{:02d}'.format(hour) }}:{{ minute }}</option>
+                        {% endfor %}
+                    {% endfor %}
+                </select><br>
+
+                <button type="submit">Submit</button>
+            </form>
+
+            <script>
+                function validateTime() {
+                    var startTime = document.getElementById("start_time").value;
+                    var endTime = document.getElementById("end_time").value;
+            
+                    if (startTime >= endTime) {
+                        alert("Error: Desired end time must be later than Desired start time.");
+                        return false; // Prevent form submission
+                    }
+            
+                    return true; // Allow form submission
+                }
+            </script>
         </section>
 
-        <section>
-            <h2>Contact Us</h2>
-            <p>Email: your.email@example.com</p>
-        </section>
-
+    
         <!-- Displaying Python variable in HTML -->
         <section>
             <h2>Homepage URL</h2>
