--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Simple Website</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <base href="https://HONGBAEKIM.github.io/eval_booker/">
 </head>
 <body>
 
