--- a/test_server_without_API/templates/index.html
+++ b/test_server_without_API/templates/index.html
@@ -19,20 +19,22 @@
     <main>
         <section>
             
-            <h2> Intra API login </h2>
+            <!-- <h2> Intra API login </h2> -->
+            
             <!-- <h3></h3>  -->
-            <form id="authForm" action="https://api.intra.42.fr/oauth/authorize" method="GET">
+            
+            <!-- <form id="authForm" action="https://api.intra.42.fr/oauth/authorize" method="GET">
                 <input type="hidden" name="client_id" value="CLIENT_UID-OF-INTRA-APP">
                 <input type="hidden" name="redirect_uri" value="https://42test.ktano-studio.com/redirect">
                 <input type="hidden" name="response_type" value="code">
                 <input type="hidden" name="scope" value="public">
                 <input type="hidden" name="state" id="stateInput"> 
                 <button type="submit">Authorize</button>
-            </form>  
+            </form>   -->
             
             
             <h2>Input</h2>
-            <form action="{{ url_for('handle_form') }}" method="get" onsubmit="return validateTime()">
+            <form action="{{ url_for('handle_form') }}" method="POST" onsubmit="return validateTime()">
                 <!-- <label for="user_id" class="label-with-space">ID:</label>
                 <input type="text" id="user_id" name="user_id" required><br>
                 
