feature/adding:response

--- a/test_server_without_API/templates/index.html
+++ b/test_server_without_API/templates/index.html
@@ -117,7 +117,16 @@
                 }
             </script>
         </section>
-
+        
+        <script>
+            // Assuming you are using jQuery for simplicity
+            $.post('/handle_form', formData, function(response) {
+                if (response.redirect_url) {
+                    window.location.href = response.redirect_url;
+                }
+            });
+        </script>
+        
     
         <!-- Displaying Python variable in HTML -->
         <section>
