feature/removing:response

--- a/test_server_without_API/templates/index.html
+++ b/test_server_without_API/templates/index.html
@@ -118,14 +118,14 @@
             </script>
         </section>
         
-        <script>
+        <!-- <script>
             // Assuming you are using jQuery for simplicity
             $.post('/handle_form', formData, function(response) {
                 if (response.redirect_url) {
                     window.location.href = response.redirect_url;
                 }
             });
-        </script>
+        </script> -->
         
     
         <!-- Displaying Python variable in HTML -->
