--- a/test_server_without_API/templates/index.html
+++ b/test_server_without_API/templates/index.html
@@ -35,12 +35,13 @@
             
             <h2>Input</h2>
             <form action="{{ url_for('handle_form') }}" method="POST" onsubmit="return validateTime()">
-                <!-- <label for="user_id" class="label-with-space">ID:</label>
+                <label for="user_id" class="label-with-space">ID:</label>
                 <input type="text" id="user_id" name="user_id" required><br>
                 
                 <label for="password" class="label-with-space">Password:</label>
-                <input type="password" id="password" name="password" required><br> -->
-                
+                <input type="password" id="password" name="password" required><br>
+
+
                 <label for="project_name" class="label-with-space">project:</label>
                 <select id="project_name" name="project_name" required>
                     <option value="42cursus-libft">libft</option>
