--- a/test_server_back_message/templates/index.html
+++ b/test_server_back_message/templates/index.html
@@ -157,8 +157,8 @@
         <p>&copy; 2024 Your Simple Website</p>
     </footer>
 
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
-    <!-- <script src="https://www.hongpage.com/static/script.js"></script>
+    <!-- <script src="{{ url_for('static', filename='script.js') }}"></script> -->
+    <script src="static/script.js"></script>
 
 </body>
 </html>
